# expr-eval

./: .gitignore  CMakeLists.txt  README.md  expression_evaluator.sln
Lexer/: Lexer.vcxproj.filters  dfa.c
Lexer/include/dfa/: dfa.h
Tests/: Tests.vcxproj  dfa_tests.c  main.c
expression_evaluator/: expression_evaluator.vcxproj  expression_evaluator.vcxproj.filters  helperlib.c  helperlib.h  lexer.c  lexer.h  main.c  parser.c  parser.h  sample.txt  tempfile.c  tempfile.h  test.txt  test1.txt
src/lexer/: CMakeLists.txt  Lexer.vcxproj  dfa.c  dfa.h  lexer.c  lexer.h
tests/: CMakeLists.txt  Tests.vcxproj  Tests.vcxproj.filters  dfa_tests.c  dfa_tests.h  lexer_tests.c  lexer_tests.h  main.c
